# aoc2024

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
day-01/: Cargo.toml
day-02/: Cargo.toml
day-03/: Cargo.toml
day-04/: Cargo.toml
day-05/: Cargo.toml
day-06/: Cargo.toml
day-07/: Cargo.toml
day-08/: Cargo.toml
day-09/: Cargo.toml
inputs/: surprise.md
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs  utils.rs
